# cfd-visualization

./: .gitignore  .pre-commit-config.yaml  MIGRATION_PLAN.md  README.md  ROADMAP.md  USAGE_GUIDE.md  activate_env.bat  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_env.bat  setup_env.sh
.github/workflows/: ci.yml
cfd_viz/: __init__.py  _batch.py  _cli_impl.py  cfd_python_integration.py  cli.py  convert.py  defaults.py  info.py  quick.py  requirements.txt  stats.py  visualize_cfd.py
cfd_viz/analysis/: __init__.py  boundary_layer.py  case_comparison.py  comparison.py  flow_features.py  line_extraction.py  line_profiles.py  realtime.py  time_series.py  vorticity.py
cfd_viz/animation/: __init__.py  animation.py  export.py  frames.py  renderers.py
cfd_viz/backends/: __init__.py  _base.py  _cfd_python.py  _numpy.py  _registry.py  _schema.py
cfd_viz/common/: __init__.py  config.py  vtk_reader.py
cfd_viz/fields/: __init__.py  derived.py  gradients.py  velocity.py  vorticity.py
cfd_viz/interactive/: __init__.py  dashboard.py  plotly.py
cfd_viz/plotting/: __init__.py  analysis.py  fields.py  line_plots.py  time_series.py
data/vtk_files/: .gitignore
examples/: 3d_animated_dashboard.py  3d_dashboard.py  3d_surface_animation.py  3d_surface_plots.py  animation_creation.py  basic_simulation.py  boundary_layer_analysis.py  cavity_variations.py  cfd_python_integration.py  channel_flow.py  error_handling.py  field_comparison.py  grid_convergence_visualized.py  high_reynolds.py  interactive_html_output.py  interactive_plotly.py  lid_driven_cavity.py  lid_driven_cavity_vectors.py  line_profiles.py  quick_plotting.py  quick_test.py  solver_comparison.py  transient_animation.py  vortex_identification.py  vorticity_analysis.py
scripts/: __init__.py  create_animation.py  create_dashboard.py  create_line_profiles.py  create_monitor.py  create_vorticity_analysis.py  dashboard.py  realtime.py  run_simulation.py  vorticity_visualizer.py
src/: DIRECTORY_OVERVIEW.md  README.md  __init__.py  config.py  run_simulation.py  visualize_cfd.py  vtk_reader.py
src/analysis/: __init__.py  cross_section_analyzer.py  parameter_study.py  realtime_monitor.py  vorticity_visualizer.py
src/animation/: __init__.py  animate_flow.py  create_cfd_animation.py  create_simple_animation.py  test_animation.py  velocity_flow_viz.py
src/interactive/: __init__.py  advanced_visualize.py  enhanced_visualize.py  interactive_dashboard.py
src/utilities/: __init__.py  run_visualization.py  simple_viz.py  visualize_cfd.py
tests/: __init__.py  conftest.py  test_cfd_python_integration.py  test_cli.py  test_convert.py  test_defaults.py  test_info.py  test_integration.py  test_quick.py  test_stats.py
tests/analysis/: __init__.py  test_boundary_layer.py  test_case_comparison.py  test_flow_features.py  test_line_extraction.py  test_time_series.py
tests/animation/: __init__.py  test_export.py  test_frames.py  test_renderers.py
tests/backends/: test_cfd_python_backend.py  test_numpy_backend.py  test_registry.py  test_schema.py
tests/common/: test_vtk_reader.py
tests/fields/: __init__.py  test_derived.py  test_gradients.py  test_velocity.py  test_vorticity.py
tests/interactive/: __init__.py  test_plotly.py
tests/plotting/: __init__.py  test_analysis.py  test_fields.py  test_line_plots.py  test_time_series.py
