[project]
name = "cfd-visualization"
version = "0.1.0"
description = "Visualization tools for CFD simulation output"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "watchdog",
    "packaging",
]

[project.optional-dependencies]
interactive = ["plotly", "dash"]
simulation = ["cfd-python>=0.1.6"]
full = ["plotly", "dash", "cfd-python>=0.1.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfd_viz"]

[tool.ruff]
# Target Python 3.9 for compatibility (cfd-python requires 3.9+)
target-version = "py39"

# Line length (PEP 8 recommends 79, but 88 is common for modern projects)
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "data",
    "output",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify (simplify code)
    "PTH",    # flake8-use-pathlib (prefer pathlib)
    "PL",     # Pylint (subset of useful checks)
    "RUF",    # Ruff-specific rules
    "NPY",    # NumPy-specific rules
    "PERF",   # Performance anti-patterns
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C408",   # unnecessary dict() call - often clearer for API kwargs
    "PLR0913", # too many arguments to function call (common in scientific code)
    "PLR2004", # magic value comparison (common in numerical code)
    "SIM108", # use ternary operator - sometimes less readable
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"__init__.py" = ["F401"]
# Examples can have more relaxed rules
"examples/*.py" = ["PLR0915", "PLW0603"]
# Tests can use assert and have longer functions
"tests/*.py" = ["S101", "PLR0915"]

[tool.ruff.lint.isort]
# Group imports: standard library, third-party, local
known-first-party = ["cfd_viz"]
# Force single line imports for clarity
force-single-line = false
# Combine as imports on same line
combine-as-imports = true

[tool.ruff.lint.pylint]
# Maximum number of arguments for functions
max-args = 10
# Maximum number of local variables
max-locals = 20
# Maximum number of branches
max-branches = 15

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings for cross-platform consistency
line-ending = "lf"

[dependency-groups]
dev = [
    "cfd-python>=0.1.6",
    "pre-commit>=4.0.0",
    "pytest>=8.4.2",
    "ruff>=0.8.0",
]
